--- a/src/pages/thanks.astro
+++ b/src/pages/thanks.astro
@@ -53,7 +53,7 @@ const fakeimg = {
   }
 </style>
 <script defer>
-fetch("https://connorwarme.github.io/pro-site/success-data")
+fetch("https://connorwarme.github.io/pro-site/thanks")
     .then((response) => response.json())
     .then((data) => console.log(data));
 </script>
