--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -20,7 +20,7 @@ const fakeimg = {
         <!-- disable captcha -->
         <input type="hidden" name="_captcha" value="false">
         <!-- add webhook -->
-        <input type="hidden" name="_webhook" value="https://connorwarme.github.io/pro-site/thanks">
+        <input type="hidden" name="_webhook" value="https://connorwarme.github.io/pro-site/thanks-data">
         <!-- next page -->
         <input type="hidden" name="_next" value="https://connorwarme.github.io/pro-site/thanks">
         <label for="first-name">
