--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -20,9 +20,9 @@ const fakeimg = {
         <!-- disable captcha -->
         <input type="hidden" name="_captcha" value="false">
         <!-- add webhook -->
-        <input type="hidden" name="_webhook" value="https://connorwarme.github.io/pro-site/thanks-data">
+        <input type="hidden" name="_webhook" value="https://connorwarme.github.io/pro-site/thanks-data/">
         <!-- next page -->
-        <input type="hidden" name="_next" value="https://connorwarme.github.io/pro-site/thanks">
+        <input type="hidden" name="_next" value="https://connorwarme.github.io/pro-site/thanks/">
         <label for="first-name">
           <span>First Name:</span>
           <input type="text" id="first-name" name="first_name" placeholder="First Name*" maxlength="256" required />
