--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -21,6 +21,7 @@ const background = blur ? 'none' : backgroundimg;
 		<link rel="icon" type="image/png" href="/pro-site/a-custom.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+    <meta name="referrer" content="no-referrer-when-downgrade" />
 		<title>{pageTitle}</title>
 	</head>
 	<body>
