--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -221,6 +221,71 @@ iframe.instagram-media {
   min-width: 272px !important;
   align-self: center;
 }
+/* contact form */
+.form-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+form.contact-form {
+  display: grid;
+  grid-template-columns: auto;
+  min-width: 256px;
+  width: 100%;
+  max-width: 775px;
+}
+.contact-form label {
+  display: grid;
+  width: inherit;
+  justify-items: center;
+}
+.contact-form label > span:first-child {
+  display: none;
+}
+.contact-form input, 
+.contact-form textarea {
+  min-height: 50px;
+  max-width: 580px;
+  width: 100%;
+  font-family: "Playfair", Georgia, 'Times New Roman', Times, serif;
+  font-size: 1rem;
+  letter-spacing: -0.3px;
+  border: 2px solid rgb(211, 211, 211);
+  border-radius: 3px;
+  padding: 0.5rem;
+  margin: 0.5rem 0;
+}
+.contact-form textarea {
+  min-height: 100px;
+}
+.contact-form input:focus, 
+.contact-form textarea:focus {
+  border-color: rgb(53, 84, 136);
+  border-color: rgb(254, 7, 62);
+  outline: none;
+}
+button#submit-btn {
+  padding: 1rem 2rem;
+  margin: 0.5rem;
+  justify-self: center;
+  border: 2px solid rgb(254, 7, 62);
+  border-radius: 5px;
+  background-color: rgb(254, 7, 62);
+  color: rgb(245, 245, 245);
+  font-family: "Unbound";
+  font-size: 1.15rem;
+  font-weight: 800;
+  letter-spacing: 1px;
+  box-shadow: 1px 1px 3px rgb(64, 64, 64);
+  transition: all 0.25s ease-in;
+}
+button#submit-btn:hover {
+  cursor: pointer;
+}
+button#submit-btn:active {
+  transform: scale(0.95);
+  box-shadow: 1px 1px 5px rgb(64, 64, 64);
+}
 
 @media screen and (min-width: 770px) {
   .nav-links {
