Update base and links, removing pro-site

--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -1,7 +1,7 @@
 ---
 const { title, description, url, date, type, img } = Astro.props;
 // not sure about including the image..
-const prositeURL = `/pro-site/${url}`;
+const prositeURL = `/${url}`;
 ---
 
 <li class="bloglist-item" id={type}>
