--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -13,13 +13,13 @@
 
 <nav>
   <div class="nav-links">
-    <a href="/pro-site/home" class="nav-home">Home</a>
-    <a href="/pro-site/about">About</a>
-    <a href="/pro-site/athlete">Athlete</a>
-    <a href="/pro-site/gallery">Gallery</a>
-    <a href="/pro-site/dietitian">Dietitian</a>
-    <a href="/pro-site/content">Content</a>
-    <a href="/pro-site/contact">Contact</a>
+    <a href="/home" class="nav-home">Home</a>
+    <a href="/about">About</a>
+    <a href="/athlete">Athlete</a>
+    <a href="/gallery">Gallery</a>
+    <a href="/dietitian">Dietitian</a>
+    <a href="/content">Content</a>
+    <a href="/contact">Contact</a>
   </div>
   <div class="nav-overlay"></div>
 </nav>
