--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,10 +18,9 @@ const background = blur ? 'none' : backgroundimg;
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/png" href="/pro-site/a-custom.png" />
+		<link rel="icon" type="image/png" href="/a-custom.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-    <meta name="referrer" content="no-referrer-when-downgrade" />
 		<title>{pageTitle}</title>
 	</head>
 	<body>
