--- a/src/layouts/MdPostLayout.astro
+++ b/src/layouts/MdPostLayout.astro
@@ -61,7 +61,7 @@ const { frontmatter } = Astro.props;
       <div class="tag-index-container">
         {frontmatter.tags.map((tag) => (
           // <a class="tag-item" href={`/tags/${tag}`}>{tag}</a>
-          <a class="tag-item" href={`/pro-site/tags/${tag}`}>{tag}</a>
+          <a class="tag-item" href={`/tags/${tag}`}>{tag}</a>
         ))}
       </div>
     </div>
