Switch to amity's email, fix home link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -95,7 +95,7 @@ const markVar = `url(${mark})`;
             <li>Now accepting clients!</li>
           </ul>
           <div class="dietician more-wrapper">
-            <a href="/dietician">
+            <a href="/dietitian">
               <img src={arrowSimple} alt="↓">
               <p>Learn More</p>
             </a>
