--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -13,7 +13,7 @@
 
 <nav>
   <div class="nav-links">
-    <a href="/home" class="nav-home">Home</a>
+    <a href="/" class="nav-home">Home</a>
     <a href="/about">About</a>
     <a href="/athlete">Athlete</a>
     <a href="/gallery">Gallery</a>
