Update title, creds to make RDN more obvious

--- a/src/pages/dietitian.astro
+++ b/src/pages/dietitian.astro
@@ -42,7 +42,7 @@ const arrowVar = `url(${arrowList})`;
 <BaseLayout pageTitle="Amity | Dietitian" img={image}>
   <div class="nutrition-wrapper">
     <div class="nutrition-container">
-      <h1 class="dietician-title animate-title">Dietitian</h1>
+      <h1 class="dietician-title animate-title">Registered Dietitian</h1>
       <div class="nutrition-intro-container">
         <p>I'm passionate about helping fellow athletes understand their fueling needs and using nutrition to maximize performance and promote long-term health.</p>
       </div>
@@ -81,6 +81,7 @@ const arrowVar = `url(${arrowList})`;
       <Counseling id="counseling"/>
       <div id="creds" class="creds-container">
         <h2 class="animate-title">Credentials</h2>
+        <p>I am a board-certified Registered Dietician (RDN).</p>
         <p>I have a Master's in Sports Nutrition from the University of Colorado in Colorado Springs (December 2021).</p>
         <p>In 2022, I completed 1000 supervised practice hours, split between the following organizations:</p>
         <ul class="creds-list">
@@ -88,7 +89,6 @@ const arrowVar = `url(${arrowList})`;
           <li>Kendall Reagan Nutrition Center, an outpatient clinic in Fort Collins with a focus on eating disorder care</li>
           <li>The Vegetable Connection, a nonprofit that helps families access nutritious, locally grown food, provides nutrition education and hosts cooking classes</li>
         </ul>
-        <p>I passed the Registered Dietitian exam (spring 2023).</p>
       </div>
     </div>
   </div>
