--- a/src/components/Pitch.astro
+++ b/src/components/Pitch.astro
@@ -1,5 +1,5 @@
 ---
-const { climb, grade, style, location } = Astro.props.climb; 
+const { climb, grade, style } = Astro.props.climb; 
 ---
 <div>
   <p><em>{climb}</em>, {grade}</p>
