Fix mispelled word

--- a/src/pages/dietitian.astro
+++ b/src/pages/dietitian.astro
@@ -81,7 +81,7 @@ const arrowVar = `url(${arrowList})`;
       <Counseling id="counseling"/>
       <div id="creds" class="creds-container">
         <h2 class="animate-title">Credentials</h2>
-        <p>I am a board-certified Registered Dietician (RDN).</p>
+        <p>I am a board-certified Registered Dietitian (RDN).</p>
         <p>I have a Master's in Sports Nutrition from the University of Colorado in Colorado Springs (December 2021).</p>
         <p>In 2022, I completed 1000 supervised practice hours, split between the following organizations:</p>
         <ul class="creds-list">
