--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -38,13 +38,15 @@ const fakeimg = {
   img {
     height: 128px;
   }
-  h1 {
+  .contact-content > h1 {
     font-family: "Unbound";
     font-size: 2rem;
     margin-bottom: 0;
   }
 
   @media screen and (min-width: 480px) {
-
+    .contact-content > h1 {
+      font-size: 2.5rem;
+    }
   }
 </style>
