--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,7 @@ import fb from "../images/icons/facebook.svg";
     <Social platform="instagram" username="amity.warme" image={insta} />
     <Social platform="facebook" username="amity.martin" image={fb} />
   </div>
-  <div class="copyright">Copyright &#169 2023 Amity's Sendy Nutrition LLC</div>
+  <div class="copyright">Copyright &#169 2023 Amity Warme</div>
   <div class="built">Built by 
     <a href="https://github.com/connorwarme" target="_blank" rel="noreferrer">Connor Warme</a>
   </div>
