Start adjusting photo positions on wide desktop

--- a/src/components/PhotoDisplay.astro
+++ b/src/components/PhotoDisplay.astro
@@ -62,7 +62,7 @@ const array = [
       name: 'Connor Brown',
       site: 'https://www.connorbrownphotography.com/',
     },
-    position: '80%',
+    position: '80% 5%',
   },
   {
     src: psycho,
@@ -73,7 +73,7 @@ const array = [
       name: 'Samuel Crossley',
       site: 'https://samuelcrossley.media/',
     },
-    position: '55%',
+    position: '55% 10%',
   },
   {
     src: corazon,
@@ -84,7 +84,7 @@ const array = [
       name: 'Scott Eubank',
       site: 'https://www.scotteubank.com/',
     },
-    position: '25%',
+    position: '25% 40%',
   },
   {
     src: lifeline,
@@ -95,7 +95,7 @@ const array = [
       name: 'Blake McCord',
       site: 'https://www.mccordmedia.org/',
     },
-    position: '70%',
+    position: '70% 33%',
   },
   {
     src: six,
@@ -117,7 +117,7 @@ const array = [
       name: 'JP Melville',
       site: 'https://www.youtube.com/@v3rtmedia/',
     },
-    position: '60%',
+    position: '60% 18%',
   },
   {
     src: mark,
@@ -128,7 +128,7 @@ const array = [
       name: 'Samuel Crossley',
       site: 'https://samuelcrossley.media/',
     },
-    position: '75%',
+    position: '75% 20%',
   },
   {
     src: air,
