--- a/src/components/PhotoDisplay.astro
+++ b/src/components/PhotoDisplay.astro
@@ -139,7 +139,7 @@ const array = [
       name: 'Scott Eubank',
       site: 'https://www.scotteubank.com/',
     },
-    position: '65%',
+    position: '65% 35%',
   },
   {
     src: dragon,
@@ -150,7 +150,7 @@ const array = [
       name: 'Ben Crawford',
       site: 'https://www.instagram.com/bencrawford17/',
     },
-    position: '10%',
+    position: '10% 55%',
   },
   {
     src: fly,
@@ -172,7 +172,7 @@ const array = [
       name: 'Felipe Nordenflycht',
       site: 'https://www.felipesh.com/',
     },
-    position: '30%',
+    position: '30% 20%',
   },
   {
     src: space,
@@ -216,7 +216,7 @@ const array = [
       name: 'Taylor Shaffer',
       site: 'https://www.taylorshaffer.com/',
     },
-    position: '30%',
+    position: '30% 0%',
   },
 ]
 ---
