Match list styling, shorten a few text lines

--- a/src/pages/dietitian.astro
+++ b/src/pages/dietitian.astro
@@ -80,14 +80,14 @@ const arrowVar = `url(${arrowList})`;
         <ul>
           <li><a href="/contact" class="simple-link">Send me a message</a>, including a brief description of who you are and your main goals with nutrition counseling.</li>
           <ul>
-            <li>If you any further questions about the process, I'll respond as soon as possible.</li>
+            <li>If you any further questions, I'll respond as soon as possible.</li>
           </ul>
           <li>I will send a link to the HIPAA-compliant online platform Healthie, with a checklist including:</li>
           <ul>
             <li>New Client Questionnaire</li>
             <li>Consent to Nutrition Services</li>
           </ul>
-          <li>We will schedule a time to meet via video call for a 60 minute intake session.</li>
+          <li>We will schedule a time to meet via video call for an intake session.</li>
           <li>We can schedule follow-up sessions as needed.</li>
           <li>I will be available to answer questions via email throughout the time we are working together.</li>
         </ul>
@@ -195,7 +195,8 @@ const arrowVar = `url(${arrowList})`;
   }
   .symptoms,
   .fuel,
-  .creds-list {
+  .creds-list,
+  .how-container > ul {
     padding-left: 10px;
   }
   .symptoms > li,
