Add wall climb to array

--- a/src/components/Achieve.astro
+++ b/src/components/Achieve.astro
@@ -17,6 +17,13 @@ const bigwall = [
     location: 'Yosemite',
   },
   {
+    climb: 'Father Time',
+    grade: '5.13b',
+    pitches: 20,
+    style: 'ground-up',
+    location: 'Yosemite',
+  },
+  {
     climb: 'Golden Gate',
     grade: '5.13a',
     pitches: 33,
