Add arc to sponsor list

--- a/src/components/Sponsor.astro
+++ b/src/components/Sponsor.astro
@@ -1,4 +1,5 @@
 ---
+import arc from '../images/logo/arc.png'
 import camp from '../images/logo/camp-logo.png'
 import scarpa from '../images/logo/scarpa-logo.png'
 import sterling from '../images/logo/sterling-logo.svg'
@@ -7,6 +8,15 @@ import totem from '../images/logo/totem.png'
 import g7 from '../images/logo/g7-logo.png'
 import physi from '../images/logo/physi.png'
 const sponsors = [
+{
+    name: `Arc'teryx`,
+    url: 'https://arcteryx.com/',
+    img: {
+      url: arc,
+      alt: `Arc'teryx Logo`,
+      size: '50px',
+    },
+  },
     {
     name: 'CAMP',
     url: 'https://www.camp.it/d/us/us/outdoor',
