Fix typo in how it works

--- a/src/pages/dietitian.astro
+++ b/src/pages/dietitian.astro
@@ -80,7 +80,7 @@ const arrowVar = `url(${arrowList})`;
         <ul>
           <li><a href="/contact" class="simple-link">Send me a message</a>, including a brief description of who you are and your main goals with nutrition counseling.</li>
           <ul>
-            <li>If you any further questions, I'll respond as soon as possible.</li>
+            <li>If you have any further questions, I'll respond as soon as possible.</li>
           </ul>
           <li>I will send a link to the HIPAA-compliant online platform Healthie, with a checklist including:</li>
           <ul>
