Change arrow color via new svg

--- a/src/pages/athlete.astro
+++ b/src/pages/athlete.astro
@@ -3,7 +3,7 @@ import Achieve from "../components/Achieve.astro";
 import Sponsor from "../components/Sponsor.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import wolverine from "../images/gallery/Wolverine.Lite.jpg";
-import arrow from "../images/icons/arrow-simple.svg";
+import arrow from "../images/icons/arrow-simple-white.svg";
 
 const image = {
   url: wolverine,
@@ -19,7 +19,7 @@ const image = {
     </div>
     <div class="scroll-container">
       <a href="#achievements" aria-label="Link to Achievements">
-        <img src={arrow} alt="" aria-label="Scroll down">
+        <img src={arrow} alt="↓" aria-label="Scroll down">
       </a>
       <!-- <span>Scroll Down</span> -->
     </div>
