Add new thumbnail img

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,7 +2,7 @@
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import lifeline from "../images/gallery/lifelineaz.jpg";
-import golden from "../images/gallery/Amity_Goldengate.Lite.jpg";
+import golden from "../images/gallery/thumbnail.jpg";
 import '../styles/global.css';
 
 const { pageTitle, img } = Astro.props;
