Add new photos w/ info

--- a/src/components/PhotoDisplay.astro
+++ b/src/components/PhotoDisplay.astro
@@ -10,12 +10,15 @@ import gear from "../images/gallery/Shaffer_Taylor-2.jpg";
 import johnny from "../images/gallery/JohnnyLat.jpg";
 import mark from "../images/gallery/mark.jpg";
 import psycho from "../images/gallery/psycho.jpg";
-import rude from "../images/gallery/rudeboys.jpg";
+import rude from "../images/gallery/rudeboys.png";
 import dragon from "../images/gallery/dragon.jpg";
 import air from "../images/gallery/air.jpg";
 import fly from "../images/gallery/fly.jpg";
 import monastery from "../images/gallery/monastery.jpg";
 import gate from "../images/gallery/gate.jpg";
+import tales from "../images/gallery/tales.jpg";
+import guns from "../images/gallery/guns.jpg";
+import jetstream from "../images/gallery/jetstream.jpg";
 import arrow from "../images/icons/arrow-custom.png";
 
 const array = [
@@ -31,15 +34,15 @@ const array = [
     position: '75%',
   },
   {
-    src: johnny,
-    alt: 'Amity on Johnny Lat',
-    caption: 'Johnny Lat',
-    location: `Turkey Rocks, CO`,
+    src: tales,
+    alt: 'Amity on Tales of Power',
+    caption: 'Tales of Power',
+    location: 'Yosemite',
     credit: {
-      name: 'Adam Pawlikiewicz',
-      site: 'https://www.adampawlikiewicz.com/',
+      name: 'Taylor Shaffer',
+      site: 'https://www.taylorshaffer.com/',
     },
-    position: '28%',
+    position: '75%',
   },
   {
     src: barnacle,
@@ -53,6 +56,17 @@ const array = [
     position: '25%',
   },
   {
+    src: jetstream,
+    alt: 'Amity on Jet Stream',
+    caption: 'Jet Stream',
+    location: 'Red Rock, NV',
+    credit: {
+      name: 'JP Melville',
+      site: 'https://www.youtube.com/@v3rtmedia/',
+    },
+    position: '75%',
+  },
+  {
     src: stingray,
     alt: 'Amity on Stingray',
     caption: 'Stingray',
@@ -62,6 +76,17 @@ const array = [
       site: 'https://www.connorbrownphotography.com/',
     },
     position: '80% 5%',
+  },
+  {
+    src: johnny,
+    alt: 'Amity on Johnny Lat',
+    caption: 'Johnny Lat',
+    location: `Turkey Rocks, CO`,
+    credit: {
+      name: 'Adam Pawlikiewicz',
+      site: 'https://www.adampawlikiewicz.com/',
+    },
+    position: '28%',
   },
   {
     src: psycho,
@@ -117,6 +142,17 @@ const array = [
       site: 'https://www.youtube.com/@v3rtmedia/',
     },
     position: '60% 18%',
+  },
+  {
+    src: guns,
+    alt: 'Amity flexing her arms',
+    caption: 'Tools of the Trade',
+    location: 'Yosemite',
+    credit: {
+      name: 'Taylor Shaffer',
+      site: 'https://www.taylorshaffer.com/',
+    },
+    position: '75%',
   },
   {
     src: mark,
