Typo on thumbnail file format

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,7 +2,7 @@
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import lifeline from "../images/gallery/lifelineaz.jpg";
-import thumbnail from "../images/gallery/a-thumbnail.jpg";
+import thumbnail from "../images/gallery/a-thumbnail.png";
 import '../styles/global.css';
 
 const { pageTitle, img } = Astro.props;
