--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,7 +9,7 @@ const image = {
 }
 ---
 
-<BaseLayout pageTitle={pageTitle} img={image}>
+<BaseLayout pageTitle={pageTitle} img={image} url="https://amitywarme.com/about">
   <div class="about-wrapper">
     <div class="about-content">
       <div class="about-initial">
