--- a/src/pages/athlete.astro
+++ b/src/pages/athlete.astro
@@ -11,7 +11,7 @@ const image = {
 }
 ---
 
-<BaseLayout pageTitle="Amity | Athlete" img={image}>
+<BaseLayout pageTitle="Amity | Athlete" img={image} url="https://amitywarme.com/athlete">
   <div class="athlete-spacer">
     <div class="athlete-title">
       <p class="athlete-title-one">PRO</p>
