--- a/src/pages/content.astro
+++ b/src/pages/content.astro
@@ -18,7 +18,7 @@ const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).fla
 const pageTitle = "Amity | Content";
 ---
 
-<BaseLayout pageTitle={pageTitle} img={img}>
+<BaseLayout pageTitle={pageTitle} img={img} url="https://amitywarme.com/content">
   <div class="content-wrapper">
     <div class="content-container">
       <h1 class="content-title">Content</h1>
