--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,7 @@ const corazonVar = `url(${corazon})`;
 const markVar = `url(${mark})`;
 
 ---
-<BaseLayout pageTitle={pageTitle} img={img} > 
+<BaseLayout pageTitle={pageTitle} img={img} url="https://amitywarme.com/"> 
   <div class="home-wrapper">
     <div class="home-title-wrapper">
       <div class="home-title-content">
