Change og:image url

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -13,7 +13,7 @@ const position = (img && !blur) ? `${img.position}` : 'center';
 const blurvar = blur ? 'none' : 'block';
 const background = blur ? 'none' : backgroundimg;
 
-const thumbnail = "https://github.com/connorwarme/pro-site/blob/main/src/images/gallery/a-thumbnail.png?raw=true"
+const thumbnail = "https://github.com/connorwarme/pro-site/raw/main/src/images/gallery/a-thumbnail.png"
 ---
 
 <html lang="en">
