--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -1,7 +1,6 @@
 ---
 import Header from "../components/Header.astro";
 import PhotoDisplay from "../components/PhotoDisplay.astro";
-import thumbnail from "../images/gallery/a-thumbnail.png";
 import '../styles/global.css';
 ---
 <html lang="en">
@@ -16,7 +15,7 @@ import '../styles/global.css';
     <meta name="og:description" content="Photo gallery for pro-climber Amity Warme." />
     <meta name="og:url" content="https://amitywarme.com/gallery" />
     <meta name="og:site-name" content="Amity Warme" />
-    <meta name="og:image" content={thumbnail} />
+    <meta name="og:image" content="https://github.com/connorwarme/pro-site/raw/main/src/images/gallery/a-thumbnail.png" />
     <meta name="og:image-width" content="3500" />
     <meta name="og:image-height" content="1832" />
 		<meta name="generator" content={Astro.generator} />
