--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -21,16 +21,15 @@ const thumbnail = "https://github.com/connorwarme/pro-site/raw/main/src/images/g
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/png" href="/a-custom.png" />
 		<meta name="viewport" content="width=device-width" />
-    <meta name="description" content="Amity Warme - professional climber and registered dietician." />
-    <meta name="og:locale" content="en_US" />
-    <meta name="og:type" content="website" />
-    <meta name="og:title" content={pageTitle} />
-    <meta name="og:description" content="Amity Warme - professional climber and registered dietician." />
-    <meta name="og:url" content={url} />
+    <meta name="description" property="og:description" content="Amity Warme - professional climber and registered dietician. As a big-wall climber, Amity's relentless drive has led to significant ascents on El Capitan including Freerider in a Day (FRIAD), El Corazon, Golden Gate, and Freerider. As a dietitian, Amity seeks to help athletes use nutrition to maximize their performance and protect long-term health." />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content={pageTitle} />
+    <meta property="og:url" content={url} />
     <meta name="og:site-name" content="Amity Warme" />
-    <meta name="og:image" content={thumbnail} />
-    <meta name="og:image-width" content="1200" />
-    <meta name="og:image-height" content="627" />
+    <meta name="image" property:"og:image" content={thumbnail} />
+    <meta property="og:image-width" content="1200" />
+    <meta property="og:image-height" content="627" />
     <meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
 	</head>
