--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -8,16 +8,15 @@ import '../styles/global.css';
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/png" href="/a-custom.png" />
 		<meta name="viewport" content="width=device-width" />
-    <meta name="description" content="Photo gallery for pro-climber Amity Warme." />
-    <meta name="og:locale" content="en_US" />
-    <meta name="og:type" content="website" />
-    <meta name="og:title" content="Amity | Gallery"/>
-    <meta name="og:description" content="Photo gallery for pro-climber Amity Warme." />
-    <meta name="og:url" content="https://amitywarme.com/gallery" />
-    <meta name="og:site-name" content="Amity Warme" />
-    <meta name="og:image" content="https://github.com/connorwarme/pro-site/raw/main/src/images/gallery/a-thumbnail-2.png" />
-    <meta name="og:image-width" content="1200" />
-    <meta name="og:image-height" content="627" />
+    <meta name="title" property="og:title" content="Amity | Gallery" />
+    <meta name="description" property="og:description" content="Amity Warme - professional climber and registered dietician. Amity's accomplishments include Freerider in a Day (FRIAD), El Corazon, and Golden Gate on El Cap. As a dietitian, Amity seeks to help athletes use nutrition to maximize their performance and protect long-term health." />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://amitywarme.com/gallery" />
+    <meta property="og:site-name" content="Amity Warme" />
+    <meta name="image" property="og:image" content="https://github.com/connorwarme/pro-site/raw/main/src/images/gallery/a-thumbnail-2.png" />
+    <meta property="og:image-width" content="1200" />
+    <meta property="og:image-height" content="627" />
 		<meta name="generator" content={Astro.generator} />
     <script src="../scripts/menu.js" />
 		<title>Amity | Gallery</title>
