--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -1,6 +1,7 @@
 ---
 import Header from "../components/Header.astro";
 import PhotoDisplay from "../components/PhotoDisplay.astro";
+import thumbnail from "../images/gallery/a-thumbnail-2.png";
 import '../styles/global.css';
 ---
 <html lang="en">
@@ -9,14 +10,17 @@ import '../styles/global.css';
 		<link rel="icon" type="image/png" href="/a-custom.png" />
 		<meta name="viewport" content="width=device-width" />
     <meta name="title" property="og:title" content="Amity | Gallery" />
-    <meta name="description" property="og:description" content="Amity Warme - professional climber and registered dietician. Amity's accomplishments include Freerider in a Day (FRIAD), El Corazon, and Golden Gate on El Cap. As a dietitian, Amity seeks to help athletes use nutrition to maximize their performance and protect long-term health." />
+    <meta name="description" property="og:description" content="Amity Warme - climber and registered dietitian. Amity's accomplishments include Freerider in a Day (FRIAD), El Corazon, and Golden Gate on El Capitan. As a dietitian, Amity seeks to help athletes use nutrition to maximize their performance and protect long-term health." />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://amitywarme.com/gallery" />
     <meta property="og:site-name" content="Amity Warme" />
-    <meta name="image" property="og:image" content="https://github.com/connorwarme/pro-site/raw/main/src/images/gallery/a-thumbnail-2.png" />
+    <meta name="image" property="og:image" content={thumbnail} />
     <meta property="og:image-width" content="1200" />
     <meta property="og:image-height" content="627" />
+    <meta name="author" content="Connor Warme" />
+    <meta name="publish_date" property="og:publish_date" content="2023-04-23" />
+    <meta property="article:modifiedtime" content={Date.now().toString()}/>
 		<meta name="generator" content={Astro.generator} />
     <script src="../scripts/menu.js" />
 		<title>Amity | Gallery</title>
